---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2024-05-19

  Bugfixes:
    - Fixed not cleaning up when other mods destroy entities via script
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2024-05-19

  Bugfixes:
    - Fixed error when creating blueprints without any entities
    - Fixed an error which caused CompaktCircuits containing signal filters to not retain
      the settings correctly (#4)
    - Fixed localization issue for "Empty Slots" setting (#3)
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2024-01-28

  Bugfixes:
    - Fixed error when changing combinator after space ship launch (introduced in 1.0.0)
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2024-01-27

  Bugfixes:
    - Fixed overriding the blueprint entities rather than just adding my own data. Aids
      compatibility with other mods modifying blueprints as they are made.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2024-01-26

  Bugfixes:
    - Fixed not getting the filter inserter back when mining it (thanks @123499)
  Features:
    - Added setting for the minimum number of empty slots in filter combinators
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2024-01-05

  Bugfixes:
    - Fixed not updating filters when only removing signals
    - Fixed it taking some time to open / close the UI
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2023-12-27

  Features:
    - Added ability to filter based on signals present on a specific wire